# qadmimes

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/cli/: main.cpp
src/core/include/: qadmimes.hpp
src/core/src/: magic_database.cpp  qadmimes.cpp
